Made hamburger menu fixed to top of screen. Added margin to all pages to prevent overlapping. Added a div to wrap HTML elements in navbar.

--- a/styles/global.css
+++ b/styles/global.css
@@ -119,7 +119,6 @@ nav .navbutton:hover{
 nav .active{
     background-color: var(--primary-color);
     color: white;
-    box-shadow: 0px 5px 5px rgb(185, 185, 185);
 }
 
 nav a{
