--- a/styles/index.css
+++ b/styles/index.css
@@ -60,7 +60,7 @@
 
 @media(max-width: 1000px){
     #company-description {
-        margin-top: 5rem;
+        margin-top: 10rem;
     }
 }
 
